--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
   ],
   "require": {
     "php": ">=5.6.4",
-    "elasticsearch/elasticsearch": "~2.2",
+    "elasticsearch/elasticsearch": "2.4.6",
     "ongr/elasticsearch-dsl": "2.2.2",
-    "illuminate/container": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-    "illuminate/contracts": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-    "illuminate/console": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-    "illuminate/pagination": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-    "illuminate/support": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-    "illuminate/database": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*"
+    "illuminate/container": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+    "illuminate/contracts": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+    "illuminate/console": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+    "illuminate/pagination": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+    "illuminate/support": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+    "illuminate/database": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
