--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
   ],
   "require": {
     "php": ">=5.6.4",
-    "elasticsearch/elasticsearch": "2.4.6",
-    "ongr/elasticsearch-dsl": "2.2.2",
+    "elasticsearch/elasticsearch": "~2.2",
+    "ongr/elasticsearch-dsl": "dev-master",
     "illuminate/container": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
     "illuminate/contracts": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
     "illuminate/console": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
